# kinfu-sample

./: CMakeLists.txt  KinectV2.hpp  README.md  RealsenseV2.hpp  Sensor.hpp  config-kinect.ini  config.h.in  main.cpp
